Codegen auth
